# drops.tf

./: Cargo.toml  Dockerfile  README.md  flake.nix  module.nix  package.nix  sqlx-data.json
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-02b8c8aab7ef9535b517e726fa14e0a9310c8c0df614e8c93c8f6c68de7c20f6.json  query-518594b077c2867f1a1c079e468a5c18960271f26bff8c49df6897416d1be023.json  query-57b871933ae9ce3a2a816ffdca7922fb9deaf383fd1b3844a872a7722486e5ee.json  query-62a22a43e7e26edc41d1ec54068d6549a0c22be9eb32dc16d5cf04932a027acb.json  query-7006a89498e3e58cde9291dbb9b3c6e11b462da481a0349418588a54dcf95354.json  query-7ad21df124f5a72093867c019bb3b2072c19bdb4d76031770d786d1cf7b4e7e1.json  query-926a788dfd54490cce5e4c115271c75a0cfb3ecfc35dcd8a6915b09716673c13.json  query-a40106c2a3be80b747585ea31b0c87452a83f7ed5527540abe96e817488a115f.json  query-ba77a9c2092b05d949dd5e4fc6b76be8b05d36b631f988fec0f648f9bbf4a640.json  query-bd1f990126fdc9215aeb3fb7f940a556c76fe650095dadaf81e2d7457b776b10.json  query-be2203ddd818ad12561f19e678f03d68dbe6d47e96f681f61ea7957833b2dc3b.json  query-eaf3118cbdb113017e13917735fd486dca97917c21371244542fedf320272cbc.json  query-f526d9d4ad2f8a38f8fb3b3cfb5bff962d915ccd7f88e8ac4a8af37a833c8926.json
benches/: template.rs
nix/: module.nix  overlay.nix  package.nix
src/: data.rs  lib.rs  main.rs  search.rs  steam_id.rs  steamid.rs  str.rs
templates/: 404.html  error.html  index.html  layout.html  notfound.html  player.html
