[package]
name = "dropstf"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.7.3", default_features = false, features = ["macros", "postgres", "json", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
main_error = "0.1.2"
tokio = { version = "1.35.1", features = ["macros", "time"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
askama = "0.12.1"
steamid-ng = "1.0.0"
steam-resolve-vanity = { version = "0.4.0", default-features = false, features = ["rustls-tls"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
moka = { version = "0.11.3", features = ["future"] }
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["trace"] }
thiserror = "1.0.56"
metrics-exporter-prometheus = "0.12.2"
metrics = "0.21.1"
smol_str = { version = "0.2.0", features = ["serde"] }
hyperlocal = "0.8.0"

[profile.release]
lto = true

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "template"
harness = false
